--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "@types/styled-components": "^5.1.5",
     "electron-is-dev": "^1.2.0",
     "history": "^5.0.0",
@@ -21,6 +22,7 @@
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
