--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/styled-components": "^5.1.5",
     "electron-is-dev": "^1.2.0",
     "history": "^5.0.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-pro-sidebar": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-syntax-highlighter": "^15.4.3",
