--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.14",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/styled-components": "^5.1.5",
     "electron-is-dev": "^1.2.0",
@@ -22,10 +23,12 @@
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-pro-sidebar": "^0.5.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "recoil": "^0.1.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
