--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "electron-webpack-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "build": "webpack",
-    "start": "npm run build && electron dist/main.js"
+    "build": "electron-builder build",
+    "build:osx": "webpack && npm run build --mac",
+    "start": "webpack && electron dist/main.js"
+  },
+  "build": {
+    "files": [
+      "dist/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release/"
+    }
   },
   "keywords": [],
   "author": "",
@@ -33,12 +43,15 @@
     "ts-loader": "^8.0.12",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
+    "electron-builder": "^22.9.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@types/react-redux": "^7.1.15",
     "electron-is-dev": "^1.2.0",
+    "file-loader": "^6.2.0",
     "node-sass": "^5.0.0",
     "react-pro-sidebar": "^0.5.0",
     "react-redux": "^7.2.2",
