--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "react-start": "react-scripts start",
+    "react-start": "HOST=0.0.0.0 react-scripts start",
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
